fix(header): Ensure nav items are correctly aligned

--- a/assets/scss/_structure.scss
+++ b/assets/scss/_structure.scss
@@ -24,3 +24,7 @@ body {
     background: var(--page-bg);
     color: var(--text-primary);
 }
+
+img, svg {
+    vertical-align: middle
+}
