--- a/assets/scss/collapsible.scss
+++ b/assets/scss/collapsible.scss
@@ -4,8 +4,7 @@
     }
 
     label {
-        display: flex;
-        align-items: center;
+        display: block;
         cursor: pointer;
         user-select: none;
 
